@@ -28,7 +28,10 @@ To Do:
 - add: there is no way to use buy/sell prices in stop formulas in the tester. 
 - median lines chart objects
 - fibo time chart objects
-- fix: data panel bug with duplicate label names overwrite each other
+- add INRANGEARRAY function to UTILS
+- fix: chart object font changes do not propagate
+- fix: chart objects dont adjust along with a stock split
+- fix: splits should adjust volume as well
 
 
 
