@@ -1,80 +1,122 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type"
- content="text/html; charset=iso-8859-1">
+
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
+  
+  
   <title>Qtstalker: Work with Scanner</title>
-  <meta name="generator"
- content="amaya 6.1, see http://www.w3.org/Amaya/">
+  <meta name="generator" content="amaya 6.1, see http://www.w3.org/Amaya/">
 </head>
+
+
 <body xml:lang="en" lang="en">
+
 <h2><u>Scanner Panel<br>
+
 </u></h2>
+
 <p>The scanner tab allows you scan symbols using a user defined
 formula. All the symbols that meet the criteria of the scan are put
 into chart group. The chart group will use the same name as the scan
 name, and be located as a folder under the "Scanner" group.</p>
+
 <p><br>
+
 <img alt="" src="scannernav.png" style="width: 232px; height: 258px;"><br>
+
 </p>
+
 <h4>New Scanner</h4>
+
 Here you can create a new scanner. Selecting this will bring up a
 series of dialogs. First you are asked for a name to call your new
 scanner. The name must be unique, if not an error message will
 display. After that, the scanner dialog will appear.<br>
+
 <br>
+
 <h4>Open Scanner</h4>
+
 This will load and display the selected scanner in the scanner
 dialog.
 <h4>Delete Scanner</h4>
+
 Deletes the selected scanner.<br>
-<h3>Rename Scanner<br>
-</h3>
+
+<h4>Rename Scanner<br>
+
+</h4>
+
 <p>This brings up a dialog that allows you to enter the new name of the
 selected scanner.</p>
+
 <h4>Run Scanner</h4>
+
 Allows the user to select a list scanners to run in sequence.<br>
+
 <br>
+
 <br>
+
 <h2>Scanner Dialog</h2>
+
 <img alt="" src="scannerdialog.png" style="width: 362px; height: 330px;"><br>
+
 <br>
+
 The "Scan" button will perform the scan. The "Apply" button will save
 the scan rule.<br>
+
 <br>
 Symbol Selection: Checking the "All symbols" box will choose all
 symbols in the qtstalker database for scanning. Pressing the symbols
-button will bring up a file selector dialog that allows you to choose a
-specific group of symbols.<br>
+button will bring up a file selector dialog that allows you to select
+the symbols of your desire. Use the Chart/Group selector to choose either
+charts or groups.<br>
+
 <br>
+
 Bar Length: the bar length to
 use when scanning symbols.<br>
+
 <br>
+
 Bars: The amount of bars to load for each symbol. Make sure you choose
 a number that will accomodate the bars required for the scanner
 formula. ie. a 200 MA will need at least 200 bars.<br>
+
 <br>
+
 Scanner Formula: This is where the user must enter a CUS type of
 formula to use for the scanning logic. See the CUS indicator plugin for
 details on how to construct a formula.<br>
+
 <br>
+
 Once all the parameters are entered, the user presses the Scan button
 to perform the scan. A progress dialog will then display the progress
 of the scan. The scan can be aborted by pressing the Cancel button from
 the progress dialog.<br>
+
 <br>
+
 **CRITICAL**<br>
+
 In order for any scanner formula to work, you must have a boolean array
 variable plotted in order to generate the scan logic. The plotted
 variable is the one that qtstalker uses for selecting symbols. A FALSE
 value will ignore the symbol and a TRUE value will select the symbol.<br>
+
 <br>
+
 <br>
-<a href="workwithbacktest.html" target="_self"><img src="back.png"
- alt="Back" border="0" height="32" width="32"></a><a
- href="toolbars.html" target="_self"><img src="next.png" alt="Next"
- border="0" height="32" width="32"></a>
-<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32"
- width="32"></a>
+
+<a href="workwithbacktest.html" target="_self"><img src="back.png" alt="Back" border="0" height="32" width="32"></a><a href="toolbars.html" target="_self"><img src="next.png" alt="Next" border="0" height="32" width="32"></a>
+<a href="toc.html"><img src="home.png" alt="Home" border="0" height="32" width="32"></a>
 </body>
 </html>
+
+ 	  	 
